# tool-control-plane

./: .gitignore  .golangci.yml  README.md  SDK_MAP.md
.github/workflows/: conformance-python.yml  lint.yml  proto-drift.yml  release-gate.yml
clients/go-client/: ARCHITECTURE.md  README.md  client.go  go.mod  go.sum
clients/python-client/: .flake8  ARCHITECTURE.md  Dockerfile  MANUAL.md  MODULAR_ARCHITECTURE.md  README.md  README_EXAMPLES.md  example.py  example_client.py  example_user.py  pyproject.toml  pytest.ini  requirements.txt
clients/python-client/tests/: test_grpc_tls.py  test_request_wrappers.py
clients/python-client/tests/conformance/: .env.test.example  __init__.py  assertions.py  conftest.py  runner.py  test_conformance_runner.py
clients/python-client/tests/conformance/adapters/: __init__.py  grpc_adapter.py  http_adapter.py
clients/python-client/toolplane/: __init__.py  provider_runtime.py  toolplane_client.py  toolplane_http_client.py
clients/python-client/toolplane/common/: __init__.py  base_config.py  base_connection_manager.py  base_session_manager.py  base_tool_manager.py  constants.py  utils.py
clients/python-client/toolplane/core/: __init__.py  config.py  connection.py  errors.py  machine.py  request.py  session.py  session_context.py  task.py  tool.py
clients/python-client/toolplane/factories/: __init__.py  client_factory.py  component_factory.py  strategy_factory.py
clients/python-client/toolplane/http_core/: __init__.py  http_config.py  http_connection.py  http_machine.py  http_request.py  http_session.py  http_session_context.py  http_task.py  http_tool.py
clients/python-client/toolplane/interfaces/: __init__.py  client_interface.py  connection_interface.py  event_interface.py  request_interface.py  session_interface.py  tool_interface.py
clients/python-client/toolplane/proto/: service_pb2.py  service_pb2_grpc.py
clients/python-client/toolplane/session/: __init__.py  config.py  context.py
clients/python-client/toolplane/toolkits/: README.md
clients/python-client/toolplane/toolkits/standalone_tools/: README.md  TESTING.md  create_directory.py  grep_search.py  launcher.py  list_dir.py  pytest.ini  read_file.py  replace_string_in_file.py  requirements.txt  run_tests.py  semantic_search.py  standalone_toolkit.py  test_failure_analysis.py  test_standalone_toolkit.py
clients/python-client/toolplane/toolkits/swe/: __init__.py  create_file.py  descriptions.py  execute_bash.py  file_editor.py  file_search.py  finish.py  list_dir.py  requirements.txt  search.py  str_replace_editor.py  submit.py  swe_toolkit.py
clients/python-client/toolplane/utils/: __init__.py  schema.py
clients/typescript-client/: .eslintrc.cjs  ARCHITECTURE.md  README.md  package-lock.json  package.json  tsconfig.json
clients/typescript-mcp-adapter/: .eslintrc.cjs  ARCHITECTURE.md  README.md  package-lock.json  package.json  (+1 more)
conformance/: ARCHITECTURE.md  README.md
server/: .dockerignore  .env.example  ARCHITECTURE.md  DOCUMENTATION.md  Dockerfile  Makefile  entrypoint.sh  generate_client_protos.sh  go.mod  go.sum  run.sh  start.sh
(+141 files in other folders)
