[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "toolplane-python-client"
version = "1.0.0"
description = "Python client for the Toolplane control plane"
readme = "README.md"
license = {text = "Apache-2.0"}
authors = [
    {name = "Toolplane Team", email = "team@toolplane.io"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "grpcio>=1.80.0",
    "grpcio-tools>=1.80.0",
    "protobuf>=6.31.1,<7.0.0",
    "googleapis-common-protos>=1.63.0",
    "requests>=2.25.0",
    "typing-extensions>=4.0.0",
    "pydantic>=2.0.0",
]
requires-python = ">=3.8"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=4.0.0",
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-builtins>=2.0.0",
    "flake8-annotations>=3.0.0",
    "pytest-asyncio>=0.21.0",
    "coverage>=7.0.0",
    "pre-commit>=3.0.0",
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
]
docs = [
    "mkdocs>=1.4.0",
    "mkdocs-material>=9.0.0",
    "mkdocstrings[python]>=0.20.0",
]
lint = [
    "black>=23.0.0",
    "isort>=5.10.0",
    "mypy>=1.0.0",
    "flake8>=6.0.0",
    "flake8-docstrings>=1.7.0",
    "flake8-builtins>=2.0.0",
    "flake8-annotations>=3.0.0",
]

[project.urls]
Homepage = "https://github.com/your-org/tool-control-plane"
Repository = "https://github.com/your-org/tool-control-plane"
"Bug Tracker" = "https://github.com/your-org/tool-control-plane/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["toolplane*"]

[tool.setuptools.package-dir]
"" = "."

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.venv
  | \.tox
  | \.mypy_cache
  | \.pytest_cache
  | \.coverage
  | build
  | dist
    | toolplane/proto
    | toolplane\.egg-info
    | toolplane_python_client\.egg-info
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
skip_glob = ["toolplane/proto/**"]

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
strict_optional = true
disallow_untyped_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true

[tool.coverage.run]
source = ["toolplane"]
omit = [
    "*/tests/*",
    "*/tests.py",
    "*/__main__.py",
    "*/setup.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
]
